sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: not found: value getNobmreValeurs
  for(i<-0 to getNobmreValeurs()-2)
              ^